Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20398

An error message should pop up when adding an LNet interface if invalid values are provided for conns_per_peer

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      created lustre server instance.

      deleted the default network during GCP provision

      add net work using following command along with conns_per_peer:

      1. lnetctl net add --net tcp --if eth0 --conns-per-peer=1000000000000000000000000

      expected error message

      checked number conns_per_peer with lnetctl net show -v command: 
      found with maximum value 65535

      # lnetctl net show -v                                                                                                                                                                       net:
          - net type: lo
            local NI(s):
              - nid: 0@lo
                status: up
                statistics:
                    send_count: 0
                    recv_count: 0
                    drop_count: 0
                tunables:
                    peer_timeout: 0
                    peer_credits: 0
                    peer_buffer_credits: 0
                    credits: 0
                lnd tunables:
                dev cpt: 0
                CPT: "[0]"
          - net type: tcp
            local NI(s):
              - nid: 10.24.28.6@tcp
                status: up
                interfaces:
                    0: eth0
                statistics:
                    send_count: 50
                    recv_count: 50
                    drop_count: 0
                tunables:
                    peer_timeout: 180
                    peer_credits: 8
                    peer_buffer_credits: 0
                    credits: 256
                lnd tunables:
                    conns_per_peer: 65535
                dev cpt: -1
                CPT: "[0]"
      

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: