LU-20398 utils: validate conns-per-peer range and overflow

strtol() returns LONG_MIN/LONG_MAX on overflow but only sets errno
if it was cleared first. parse_long() was not zeroing errno before
the call, so overflow values (e.g. 10^24) silently produced a large
positive result rather than an error.

Additionally, jt_add_ni() and set_value_helper() treated any
parse_long() failure as non-fatal, resetting cpp to -1 and
continuing. This allowed out-of-range values, overflow, and
non-numeric strings to be silently ignored instead of rejected.
Since the kernel enforces a maximum of 127 conns-per-peer, pass
through of cpp=-1 or a large garbage value produces confusing
behaviour.

The YAML import path (lnetctl import) bypassed this command-line
parsing entirely: yaml_extract_sock_tun()/yaml_extract_o2ib_tun()
read conns_per_peer straight from the cYAML tree into the __u16
lnd_conns_per_peer tunable with no range check, so an out-of-range
or overflow value was silently truncated and configured.

Fix parse_long() to zero errno before strtol() and return -1 on
ERANGE. In jt_add_ni() and set_value_helper(), reject any cpp value
that fails to parse or exceeds 127, reporting an error via cYAML and
aborting rather than continuing with a bogus value. Add
yaml_validate_conns_per_peer(), which inspects the raw cYAML integer
(int64) before it is truncated and rejects anything outside 0-127,
and call it from both YAML config handlers - handle_yaml_config_ni()
and handle_yaml_config_ip2nets().

Extend test_230 in sanity-lnet.sh with sub-cases for out-of-range
(128), integer overflow, and non-numeric input on the command line,
plus an import sub-case that corrupts an exported conns_per_peer to
an out-of-range value. Each verifies the operation fails and leaves
no NI configured.

Test-Parameters: trivial
Signed-off-by: Chris Horn <chorn@ddn.com>
Change-Id: I8adb184b9a14d85899683b7f4929429ab075a3a1
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/66688
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Xinxia Qu <xqu@ddn.com>
Reviewed-by: Manish Regmi <mregmi@ddn.com>